--- a/.github/workflows/snake-animation.yml
+++ b/.github/workflows/snake-animation.yml
@@ -33,6 +33,6 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: animation
-          build_dir: animation
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
